Failed attempt to login user

--- a/untitled/configs/config.properties
+++ b/untitled/configs/config.properties
@@ -1,2 +1,4 @@
 browser = chrome
 url = https://demo.opencart.com/en-gb?route=common/home
+userEmail = "test1984@gmail.com"
+userPassword = "test12345"
